PL_TP2/TP2/y.output
Terminals which are not used

   BURL
   BAFFIL
   BEMAIL


Grammar

    0 $accept: Report $end

    1 Report: FrontMatter Body '$'

    2 FrontMatter: BFMatter Title STitle Authores Date Institution Keywords Abstract Aknowledgements Indice

    3 BFMatter: /* empty */

    4 Title: BTITLE '(' arg ')'

    5 STitle: BSTITLE '(' arg ')'
    6       | /* empty */

    7 Authores: Authores Author
    8         | Author

    9 Author: Bauthor '(' Nome OPT_Author ')'

   10 Bauthor: BAUTHOR

   11 Nome: arg

   12 OPT_Author: Nident OPT_A_UM
   13           | OPT_A_UM

   14 OPT_A_UM: Email OPT_A_Dois
   15         | OPT_A_Dois

   16 OPT_A_Dois: Url OPT_A_Tres
   17           | OPT_A_Tres

   18 OPT_A_Tres: Affiliation
   19           | /* empty */

   20 Nident: sep id

   21 Email: sep email

   22 Url: sep url

   23 Affiliation: sep arg

   24 Date: BDATE '(' ')'

   25 Institution: BINST '(' arg ')'
   26            | /* empty */

   27 Keywords: BKEY '(' Keys ')'
   28         | /* empty */

   29 Keys: Keys sep Key
   30     | Key

   31 Key: arg

   32 Abstract: BABS '{' ParaList '}'

   33 Aknowledgements: BAKNOW '{' ParaList '}'
   34                | /* empty */

   35 ParaList: ParaList Paragraph
   36         | Paragraph

   37 Indice: Toc

   38 Toc: BINDICE '(' ')' Lof
   39    | Lof

   40 Lof: BINDICE '(' IFIGURE ')' Lot
   41    | Lot

   42 Lot: BINDICE '(' ITABLE ')'
   43    | /* empty */

   44 Body: ChapterList

   45 ChapterList: ChapterList Chapter
   46            | Chapter

   47 Chapter: C_Title '{' ElemList '}'

   48 C_Title: BCHAP '(' texto ')'

   49 ElemList: ElemList Elem
   50         | Elem

   51 Elem: CodeBlock
   52     | Paragraph
   53     | Section
   54     | Summary
   55     | Float
   56     | List

   57 CodeBlock: BCODE '{' codigo '}'

   58 Section: S_Title '{' ElemList '}'

   59 S_Title: BSEC '(' texto ')'

   60 Paragraph: BParag '{' ParaContend '}'

   61 ParaContend: ParaContend texto
   62            | ParaContend FreeElem
   63            | /* empty */

   64 FreeElem: FootNote
   65         | Ref
   66         | Xref
   67         | CitRef
   68         | Href
   69         | Iterm
   70         | Bold
   71         | Italic
   72         | Underline
   73         | InlineCode
   74         | Acronym

   75 Summary: BSUMMARY '(' texto ')'

   76 Ref: BREF '(' texto sep texto ')'

   77 Href: BHREF '(' texto sep url ')'

   78 Xref: BXREF '(' texto ')'

   79 CitRef: BCiteR '(' texto ')'

   80 Iterm: BIterm '(' texto ')'

   81 FootNote: BFoteN '(' texto ')'

   82 InlineCode: BLineCode '(' texto ')'

   83 Acronym: BAcronym '(' texto ')'

   84 Bold: BBOLD '(' BCont ')'

   85 BCont: BCont texto
   86      | BCont Italic
   87      | BCont Underline
   88      | /* empty */

   89 Italic: BItalic '(' ICont ')'

   90 ICont: ICont texto
   91      | ICont Bold
   92      | ICont Underline
   93      | /* empty */

   94 Underline: BUnderLine '(' UCont ')'

   95 UCont: UCont texto
   96      | UCont Bold
   97      | UCont Italic
   98      | /* empty */

   99 Float: Figure
  100      | TABELA

  101 Figure: BFig '(' Image Caption ')'

  102 Image: BImg '(' Path ')'

  103 Path: texto

  104 Caption: BCAP '(' texto ')'

  105 List: Enumerate
  106     | Itemize

  107 Enumerate: BENUM '(' C_ENUM ')'

  108 C_ENUM: C_ENUM Item
  109       | C_ENUM Itemize
  110       | /* empty */

  111 Itemize: BItemize '(' C_Item ')'

  112 C_Item: C_Item Item
  113       | C_Item Enumerate
  114       | /* empty */

  115 Item: BItem '(' ParaContend ')'

  116 TABELA: BTAB '(' Caption C_Tabela ')'

  117 C_Tabela: C_Tabela Linha
  118         | Linha

  119 Linha: BLinha '{' Celulas '}'

  120 Celulas: Celulas Cel
  121        | Cel

  122 Cel: BCel '(' OPT_Cel ')' '{' ParaContend '}'

  123 OPT_Cel: POS sep OPT_Cel_um
  124        | OPT_Cel_um

  125 POS: carater

  126 OPT_Cel_um: DIM
  127           | /* empty */

  128 DIM: inteiro


Terminals, with rules where they appear

$end (0) 0
'$' (36) 1
'(' (40) 4 5 9 24 25 27 38 40 42 48 59 75 76 77 78 79 80 81 82 83 84
    89 94 101 102 104 107 111 115 116 122
')' (41) 4 5 9 24 25 27 38 40 42 48 59 75 76 77 78 79 80 81 82 83 84
    89 94 101 102 104 107 111 115 116 122
'{' (123) 32 33 47 57 58 60 119 122
'}' (125) 32 33 47 57 58 60 119 122
error (256)
arg (258) 4 5 11 23 25 31
id (259) 20
email (260) 21
url (261) 22 77
sep (262) 20 21 22 23 29 76 77 123
texto (263) 48 59 61 75 76 77 78 79 80 81 82 83 85 90 95 103 104
codigo (264) 57
carater (265) 125
inteiro (266) 128
BTITLE (267) 4
BSTITLE (268) 5
BAUTHOR (269) 10
BURL (270)
BAFFIL (271)
BEMAIL (272)
BDATE (273) 24
BINST (274) 25
BKEY (275) 27
BABS (276) 32
BAKNOW (277) 33
BINDICE (278) 38 40 42
BSUMMARY (279) 75
BBOLD (280) 84
BParag (281) 60
BREF (282) 76
BCODE (283) 57
BIterm (284) 80
BFoteN (285) 81
BLineCode (286) 82
BUnderLine (287) 94
BAcronym (288) 83
BItalic (289) 89
BXREF (290) 78
BHREF (291) 77
BCiteR (292) 79
BCHAP (293) 48
BSEC (294) 59
BFig (295) 101
BImg (296) 102
BENUM (297) 107
BCAP (298) 104
BLinha (299) 119
BItem (300) 115
BTAB (301) 116
BCel (302) 122
BItemize (303) 111
IFIGURE (304) 40
ITABLE (305) 42


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
Report (57)
    on left: 1, on right: 0
FrontMatter (58)
    on left: 2, on right: 1
BFMatter (59)
    on left: 3, on right: 2
Title (60)
    on left: 4, on right: 2
STitle (61)
    on left: 5 6, on right: 2
Authores (62)
    on left: 7 8, on right: 2 7
Author (63)
    on left: 9, on right: 7 8
Bauthor (64)
    on left: 10, on right: 9
Nome (65)
    on left: 11, on right: 9
OPT_Author (66)
    on left: 12 13, on right: 9
OPT_A_UM (67)
    on left: 14 15, on right: 12 13
OPT_A_Dois (68)
    on left: 16 17, on right: 14 15
OPT_A_Tres (69)
    on left: 18 19, on right: 16 17
Nident (70)
    on left: 20, on right: 12
Email (71)
    on left: 21, on right: 14
Url (72)
    on left: 22, on right: 16
Affiliation (73)
    on left: 23, on right: 18
Date (74)
    on left: 24, on right: 2
Institution (75)
    on left: 25 26, on right: 2
Keywords (76)
    on left: 27 28, on right: 2
Keys (77)
    on left: 29 30, on right: 27 29
Key (78)
    on left: 31, on right: 29 30
Abstract (79)
    on left: 32, on right: 2
Aknowledgements (80)
    on left: 33 34, on right: 2
ParaList (81)
    on left: 35 36, on right: 32 33 35
Indice (82)
    on left: 37, on right: 2
Toc (83)
    on left: 38 39, on right: 37
Lof (84)
    on left: 40 41, on right: 38 39
Lot (85)
    on left: 42 43, on right: 40 41
Body (86)
    on left: 44, on right: 1
ChapterList (87)
    on left: 45 46, on right: 44 45
Chapter (88)
    on left: 47, on right: 45 46
C_Title (89)
    on left: 48, on right: 47
ElemList (90)
    on left: 49 50, on right: 47 49 58
Elem (91)
    on left: 51 52 53 54 55 56, on right: 49 50
CodeBlock (92)
    on left: 57, on right: 51
Section (93)
    on left: 58, on right: 53
S_Title (94)
    on left: 59, on right: 58
Paragraph (95)
    on left: 60, on right: 35 36 52
ParaContend (96)
    on left: 61 62 63, on right: 60 61 62 115 122
FreeElem (97)
    on left: 64 65 66 67 68 69 70 71 72 73 74, on right: 62
Summary (98)
    on left: 75, on right: 54
Ref (99)
    on left: 76, on right: 65
Href (100)
    on left: 77, on right: 68
Xref (101)
    on left: 78, on right: 66
CitRef (102)
    on left: 79, on right: 67
Iterm (103)
    on left: 80, on right: 69
FootNote (104)
    on left: 81, on right: 64
InlineCode (105)
    on left: 82, on right: 73
Acronym (106)
    on left: 83, on right: 74
Bold (107)
    on left: 84, on right: 70 91 96
BCont (108)
    on left: 85 86 87 88, on right: 84 85 86 87
Italic (109)
    on left: 89, on right: 71 86 97
ICont (110)
    on left: 90 91 92 93, on right: 89 90 91 92
Underline (111)
    on left: 94, on right: 72 87 92
UCont (112)
    on left: 95 96 97 98, on right: 94 95 96 97
Float (113)
    on left: 99 100, on right: 55
Figure (114)
    on left: 101, on right: 99
Image (115)
    on left: 102, on right: 101
Path (116)
    on left: 103, on right: 102
Caption (117)
    on left: 104, on right: 101 116
List (118)
    on left: 105 106, on right: 56
Enumerate (119)
    on left: 107, on right: 105 113
C_ENUM (120)
    on left: 108 109 110, on right: 107 108 109
Itemize (121)
    on left: 111, on right: 106 109
C_Item (122)
    on left: 112 113 114, on right: 111 112 113
Item (123)
    on left: 115, on right: 108 112
TABELA (124)
    on left: 116, on right: 100
C_Tabela (125)
    on left: 117 118, on right: 116 117
Linha (126)
    on left: 119, on right: 117 118
Celulas (127)
    on left: 120 121, on right: 119 120
Cel (128)
    on left: 122, on right: 120 121
OPT_Cel (129)
    on left: 123 124, on right: 122
POS (130)
    on left: 125, on right: 123
OPT_Cel_um (131)
    on left: 126 127, on right: 123 124
DIM (132)
    on left: 128, on right: 126


state 0

    0 $accept: . Report $end

    $default  reduce using rule 3 (BFMatter)

    Report       go to state 1
    FrontMatter  go to state 2
    BFMatter     go to state 3


state 1

    0 $accept: Report . $end

    $end  shift, and go to state 4


state 2

    1 Report: FrontMatter . Body '$'

    BCHAP  shift, and go to state 5

    Body         go to state 6
    ChapterList  go to state 7
    Chapter      go to state 8
    C_Title      go to state 9


state 3

    2 FrontMatter: BFMatter . Title STitle Authores Date Institution Keywords Abstract Aknowledgements Indice

    BTITLE  shift, and go to state 10

    Title  go to state 11


state 4

    0 $accept: Report $end .

    $default  accept


state 5

   48 C_Title: BCHAP . '(' texto ')'

    '('  shift, and go to state 12


state 6

    1 Report: FrontMatter Body . '$'

    '$'  shift, and go to state 13


state 7

   44 Body: ChapterList .
   45 ChapterList: ChapterList . Chapter

    BCHAP  shift, and go to state 5

    $default  reduce using rule 44 (Body)

    Chapter  go to state 14
    C_Title  go to state 9


state 8

   46 ChapterList: Chapter .

    $default  reduce using rule 46 (ChapterList)


state 9

   47 Chapter: C_Title . '{' ElemList '}'

    '{'  shift, and go to state 15


state 10

    4 Title: BTITLE . '(' arg ')'

    '('  shift, and go to state 16


state 11

    2 FrontMatter: BFMatter Title . STitle Authores Date Institution Keywords Abstract Aknowledgements Indice

    BSTITLE  shift, and go to state 17

    $default  reduce using rule 6 (STitle)

    STitle  go to state 18


state 12

   48 C_Title: BCHAP '(' . texto ')'

    texto  shift, and go to state 19


state 13

    1 Report: FrontMatter Body '$' .

    $default  reduce using rule 1 (Report)


state 14

   45 ChapterList: ChapterList Chapter .

    $default  reduce using rule 45 (ChapterList)


state 15

   47 Chapter: C_Title '{' . ElemList '}'

    BSUMMARY  shift, and go to state 20
    BParag    shift, and go to state 21
    BCODE     shift, and go to state 22
    BSEC      shift, and go to state 23
    BFig      shift, and go to state 24
    BENUM     shift, and go to state 25
    BTAB      shift, and go to state 26
    BItemize  shift, and go to state 27

    ElemList   go to state 28
    Elem       go to state 29
    CodeBlock  go to state 30
    Section    go to state 31
    S_Title    go to state 32
    Paragraph  go to state 33
    Summary    go to state 34
    Float      go to state 35
    Figure     go to state 36
    List       go to state 37
    Enumerate  go to state 38
    Itemize    go to state 39
    TABELA     go to state 40


state 16

    4 Title: BTITLE '(' . arg ')'

    arg  shift, and go to state 41


state 17

    5 STitle: BSTITLE . '(' arg ')'

    '('  shift, and go to state 42


state 18

    2 FrontMatter: BFMatter Title STitle . Authores Date Institution Keywords Abstract Aknowledgements Indice

    BAUTHOR  shift, and go to state 43

    Authores  go to state 44
    Author    go to state 45
    Bauthor   go to state 46


state 19

   48 C_Title: BCHAP '(' texto . ')'

    ')'  shift, and go to state 47


state 20

   75 Summary: BSUMMARY . '(' texto ')'

    '('  shift, and go to state 48


state 21

   60 Paragraph: BParag . '{' ParaContend '}'

    '{'  shift, and go to state 49


state 22

   57 CodeBlock: BCODE . '{' codigo '}'

    '{'  shift, and go to state 50


state 23

   59 S_Title: BSEC . '(' texto ')'

    '('  shift, and go to state 51


state 24

  101 Figure: BFig . '(' Image Caption ')'

    '('  shift, and go to state 52


state 25

  107 Enumerate: BENUM . '(' C_ENUM ')'

    '('  shift, and go to state 53


state 26

  116 TABELA: BTAB . '(' Caption C_Tabela ')'

    '('  shift, and go to state 54


state 27

  111 Itemize: BItemize . '(' C_Item ')'

    '('  shift, and go to state 55


state 28

   47 Chapter: C_Title '{' ElemList . '}'
   49 ElemList: ElemList . Elem

    BSUMMARY  shift, and go to state 20
    BParag    shift, and go to state 21
    BCODE     shift, and go to state 22
    BSEC      shift, and go to state 23
    BFig      shift, and go to state 24
    BENUM     shift, and go to state 25
    BTAB      shift, and go to state 26
    BItemize  shift, and go to state 27
    '}'       shift, and go to state 56

    Elem       go to state 57
    CodeBlock  go to state 30
    Section    go to state 31
    S_Title    go to state 32
    Paragraph  go to state 33
    Summary    go to state 34
    Float      go to state 35
    Figure     go to state 36
    List       go to state 37
    Enumerate  go to state 38
    Itemize    go to state 39
    TABELA     go to state 40


state 29

   50 ElemList: Elem .

    $default  reduce using rule 50 (ElemList)


state 30

   51 Elem: CodeBlock .

    $default  reduce using rule 51 (Elem)


state 31

   53 Elem: Section .

    $default  reduce using rule 53 (Elem)


state 32

   58 Section: S_Title . '{' ElemList '}'

    '{'  shift, and go to state 58


state 33

   52 Elem: Paragraph .

    $default  reduce using rule 52 (Elem)


state 34

   54 Elem: Summary .

    $default  reduce using rule 54 (Elem)


state 35

   55 Elem: Float .

    $default  reduce using rule 55 (Elem)


state 36

   99 Float: Figure .

    $default  reduce using rule 99 (Float)


state 37

   56 Elem: List .

    $default  reduce using rule 56 (Elem)


state 38

  105 List: Enumerate .

    $default  reduce using rule 105 (List)


state 39

  106 List: Itemize .

    $default  reduce using rule 106 (List)


state 40

  100 Float: TABELA .

    $default  reduce using rule 100 (Float)


state 41

    4 Title: BTITLE '(' arg . ')'

    ')'  shift, and go to state 59


state 42

    5 STitle: BSTITLE '(' . arg ')'

    arg  shift, and go to state 60


state 43

   10 Bauthor: BAUTHOR .

    $default  reduce using rule 10 (Bauthor)


state 44

    2 FrontMatter: BFMatter Title STitle Authores . Date Institution Keywords Abstract Aknowledgements Indice
    7 Authores: Authores . Author

    BAUTHOR  shift, and go to state 43
    BDATE    shift, and go to state 61

    Author   go to state 62
    Bauthor  go to state 46
    Date     go to state 63


state 45

    8 Authores: Author .

    $default  reduce using rule 8 (Authores)


state 46

    9 Author: Bauthor . '(' Nome OPT_Author ')'

    '('  shift, and go to state 64


state 47

   48 C_Title: BCHAP '(' texto ')' .

    $default  reduce using rule 48 (C_Title)


state 48

   75 Summary: BSUMMARY '(' . texto ')'

    texto  shift, and go to state 65


state 49

   60 Paragraph: BParag '{' . ParaContend '}'

    $default  reduce using rule 63 (ParaContend)

    ParaContend  go to state 66


state 50

   57 CodeBlock: BCODE '{' . codigo '}'

    codigo  shift, and go to state 67


state 51

   59 S_Title: BSEC '(' . texto ')'

    texto  shift, and go to state 68


state 52

  101 Figure: BFig '(' . Image Caption ')'

    BImg  shift, and go to state 69

    Image  go to state 70


state 53

  107 Enumerate: BENUM '(' . C_ENUM ')'

    $default  reduce using rule 110 (C_ENUM)

    C_ENUM  go to state 71


state 54

  116 TABELA: BTAB '(' . Caption C_Tabela ')'

    BCAP  shift, and go to state 72

    Caption  go to state 73


state 55

  111 Itemize: BItemize '(' . C_Item ')'

    $default  reduce using rule 114 (C_Item)

    C_Item  go to state 74


state 56

   47 Chapter: C_Title '{' ElemList '}' .

    $default  reduce using rule 47 (Chapter)


state 57

   49 ElemList: ElemList Elem .

    $default  reduce using rule 49 (ElemList)


state 58

   58 Section: S_Title '{' . ElemList '}'

    BSUMMARY  shift, and go to state 20
    BParag    shift, and go to state 21
    BCODE     shift, and go to state 22
    BSEC      shift, and go to state 23
    BFig      shift, and go to state 24
    BENUM     shift, and go to state 25
    BTAB      shift, and go to state 26
    BItemize  shift, and go to state 27

    ElemList   go to state 75
    Elem       go to state 29
    CodeBlock  go to state 30
    Section    go to state 31
    S_Title    go to state 32
    Paragraph  go to state 33
    Summary    go to state 34
    Float      go to state 35
    Figure     go to state 36
    List       go to state 37
    Enumerate  go to state 38
    Itemize    go to state 39
    TABELA     go to state 40


state 59

    4 Title: BTITLE '(' arg ')' .

    $default  reduce using rule 4 (Title)


state 60

    5 STitle: BSTITLE '(' arg . ')'

    ')'  shift, and go to state 76


state 61

   24 Date: BDATE . '(' ')'

    '('  shift, and go to state 77


state 62

    7 Authores: Authores Author .

    $default  reduce using rule 7 (Authores)


state 63

    2 FrontMatter: BFMatter Title STitle Authores Date . Institution Keywords Abstract Aknowledgements Indice

    BINST  shift, and go to state 78

    $default  reduce using rule 26 (Institution)

    Institution  go to state 79


state 64

    9 Author: Bauthor '(' . Nome OPT_Author ')'

    arg  shift, and go to state 80

    Nome  go to state 81


state 65

   75 Summary: BSUMMARY '(' texto . ')'

    ')'  shift, and go to state 82


state 66

   60 Paragraph: BParag '{' ParaContend . '}'
   61 ParaContend: ParaContend . texto
   62            | ParaContend . FreeElem

    texto       shift, and go to state 83
    BBOLD       shift, and go to state 84
    BREF        shift, and go to state 85
    BIterm      shift, and go to state 86
    BFoteN      shift, and go to state 87
    BLineCode   shift, and go to state 88
    BUnderLine  shift, and go to state 89
    BAcronym    shift, and go to state 90
    BItalic     shift, and go to state 91
    BXREF       shift, and go to state 92
    BHREF       shift, and go to state 93
    BCiteR      shift, and go to state 94
    '}'         shift, and go to state 95

    FreeElem    go to state 96
    Ref         go to state 97
    Href        go to state 98
    Xref        go to state 99
    CitRef      go to state 100
    Iterm       go to state 101
    FootNote    go to state 102
    InlineCode  go to state 103
    Acronym     go to state 104
    Bold        go to state 105
    Italic      go to state 106
    Underline   go to state 107


state 67

   57 CodeBlock: BCODE '{' codigo . '}'

    '}'  shift, and go to state 108


state 68

   59 S_Title: BSEC '(' texto . ')'

    ')'  shift, and go to state 109


state 69

  102 Image: BImg . '(' Path ')'

    '('  shift, and go to state 110


state 70

  101 Figure: BFig '(' Image . Caption ')'

    BCAP  shift, and go to state 72

    Caption  go to state 111


state 71

  107 Enumerate: BENUM '(' C_ENUM . ')'
  108 C_ENUM: C_ENUM . Item
  109       | C_ENUM . Itemize

    BItem     shift, and go to state 112
    BItemize  shift, and go to state 27
    ')'       shift, and go to state 113

    Itemize  go to state 114
    Item     go to state 115


state 72

  104 Caption: BCAP . '(' texto ')'

    '('  shift, and go to state 116


state 73

  116 TABELA: BTAB '(' Caption . C_Tabela ')'

    BLinha  shift, and go to state 117

    C_Tabela  go to state 118
    Linha     go to state 119


state 74

  111 Itemize: BItemize '(' C_Item . ')'
  112 C_Item: C_Item . Item
  113       | C_Item . Enumerate

    BENUM  shift, and go to state 25
    BItem  shift, and go to state 112
    ')'    shift, and go to state 120

    Enumerate  go to state 121
    Item       go to state 122


state 75

   49 ElemList: ElemList . Elem
   58 Section: S_Title '{' ElemList . '}'

    BSUMMARY  shift, and go to state 20
    BParag    shift, and go to state 21
    BCODE     shift, and go to state 22
    BSEC      shift, and go to state 23
    BFig      shift, and go to state 24
    BENUM     shift, and go to state 25
    BTAB      shift, and go to state 26
    BItemize  shift, and go to state 27
    '}'       shift, and go to state 123

    Elem       go to state 57
    CodeBlock  go to state 30
    Section    go to state 31
    S_Title    go to state 32
    Paragraph  go to state 33
    Summary    go to state 34
    Float      go to state 35
    Figure     go to state 36
    List       go to state 37
    Enumerate  go to state 38
    Itemize    go to state 39
    TABELA     go to state 40


state 76

    5 STitle: BSTITLE '(' arg ')' .

    $default  reduce using rule 5 (STitle)


state 77

   24 Date: BDATE '(' . ')'

    ')'  shift, and go to state 124


state 78

   25 Institution: BINST . '(' arg ')'

    '('  shift, and go to state 125


state 79

    2 FrontMatter: BFMatter Title STitle Authores Date Institution . Keywords Abstract Aknowledgements Indice

    BKEY  shift, and go to state 126

    $default  reduce using rule 28 (Keywords)

    Keywords  go to state 127


state 80

   11 Nome: arg .

    $default  reduce using rule 11 (Nome)


state 81

    9 Author: Bauthor '(' Nome . OPT_Author ')'

    sep  shift, and go to state 128

    $default  reduce using rule 19 (OPT_A_Tres)

    OPT_Author   go to state 129
    OPT_A_UM     go to state 130
    OPT_A_Dois   go to state 131
    OPT_A_Tres   go to state 132
    Nident       go to state 133
    Email        go to state 134
    Url          go to state 135
    Affiliation  go to state 136


state 82

   75 Summary: BSUMMARY '(' texto ')' .

    $default  reduce using rule 75 (Summary)


state 83

   61 ParaContend: ParaContend texto .

    $default  reduce using rule 61 (ParaContend)


state 84

   84 Bold: BBOLD . '(' BCont ')'

    '('  shift, and go to state 137


state 85

   76 Ref: BREF . '(' texto sep texto ')'

    '('  shift, and go to state 138


state 86

   80 Iterm: BIterm . '(' texto ')'

    '('  shift, and go to state 139


state 87

   81 FootNote: BFoteN . '(' texto ')'

    '('  shift, and go to state 140


state 88

   82 InlineCode: BLineCode . '(' texto ')'

    '('  shift, and go to state 141


state 89

   94 Underline: BUnderLine . '(' UCont ')'

    '('  shift, and go to state 142


state 90

   83 Acronym: BAcronym . '(' texto ')'

    '('  shift, and go to state 143


state 91

   89 Italic: BItalic . '(' ICont ')'

    '('  shift, and go to state 144


state 92

   78 Xref: BXREF . '(' texto ')'

    '('  shift, and go to state 145


state 93

   77 Href: BHREF . '(' texto sep url ')'

    '('  shift, and go to state 146


state 94

   79 CitRef: BCiteR . '(' texto ')'

    '('  shift, and go to state 147


state 95

   60 Paragraph: BParag '{' ParaContend '}' .

    $default  reduce using rule 60 (Paragraph)


state 96

   62 ParaContend: ParaContend FreeElem .

    $default  reduce using rule 62 (ParaContend)


state 97

   65 FreeElem: Ref .

    $default  reduce using rule 65 (FreeElem)


state 98

   68 FreeElem: Href .

    $default  reduce using rule 68 (FreeElem)


state 99

   66 FreeElem: Xref .

    $default  reduce using rule 66 (FreeElem)


state 100

   67 FreeElem: CitRef .

    $default  reduce using rule 67 (FreeElem)


state 101

   69 FreeElem: Iterm .

    $default  reduce using rule 69 (FreeElem)


state 102

   64 FreeElem: FootNote .

    $default  reduce using rule 64 (FreeElem)


state 103

   73 FreeElem: InlineCode .

    $default  reduce using rule 73 (FreeElem)


state 104

   74 FreeElem: Acronym .

    $default  reduce using rule 74 (FreeElem)


state 105

   70 FreeElem: Bold .

    $default  reduce using rule 70 (FreeElem)


state 106

   71 FreeElem: Italic .

    $default  reduce using rule 71 (FreeElem)


state 107

   72 FreeElem: Underline .

    $default  reduce using rule 72 (FreeElem)


state 108

   57 CodeBlock: BCODE '{' codigo '}' .

    $default  reduce using rule 57 (CodeBlock)


state 109

   59 S_Title: BSEC '(' texto ')' .

    $default  reduce using rule 59 (S_Title)


state 110

  102 Image: BImg '(' . Path ')'

    texto  shift, and go to state 148

    Path  go to state 149


state 111

  101 Figure: BFig '(' Image Caption . ')'

    ')'  shift, and go to state 150

